--- a/frontend/style.css
+++ b/frontend/style.css
@@ -3,14 +3,14 @@ body{
 	font-family: 'Poppins', sans-serif;
 	font-weight: 300;
 	line-height: 1.7;
-	color: #ffeba7;
+	color: #00d4ff;
 	background-color: #1f2029;
 }
 a:hover {
 	text-decoration: none;
 }
 .link {
-  color: #ffeba7;
+  color: #00d4ff;
 }
 .link:hover {
   color: #c4c3ca;
@@ -49,7 +49,7 @@ display: none;
   padding: 0;
   margin: 10px auto;
   cursor: pointer;
-  background-color: #ffeba7;
+  background-color: #00d4ff;
 }
 .checkbox:checked + label:before,
 .checkbox:not(:checked) + label:before{
@@ -58,7 +58,7 @@ display: none;
   width: 36px;
   height: 36px;
   border-radius: 50%;
-  color: #ffeba7;
+  color: #00d4ff;
   background-color: #020305;
   font-family: 'unicons';
   content: '\eb4f';
@@ -171,12 +171,12 @@ display: none;
   display: -ms-inline-flexbox;
   display: inline-flex;
   align-items: center;
-  background-color: #ffeba7;
+  background-color: #00d4ff;
   color: #000000;
 }
 .btn:hover{  
   background-color: #000000;
-  color: #ffeba7;
+  color: #00d4ff;
   box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
 }
 
